# Audio-JEPA

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml  rich_progress_bar.yaml
configs/data/: audioset.yaml
configs/logger/: wandb.yaml
configs/masks/: multiblock.yaml  random_block.yaml
configs/model/: jepa.yaml  jepa_base_attention.yaml  jepa_flash1.yaml  jepa_flash2.yaml  jepa_flash3.yaml
configs/trainer/: cpu.yaml  ddp.yaml  default.yaml  dev.yaml  gpu.yaml
scripts/: train_on_AS2M.slurm
src/: train.py
src/callbacks/: audioset_callback.py
src/data/: audioset_datamodule.py  mnist_datamodule.py
src/data/components/: audioset_dataset.py  mel_spec.py
src/masks/components/: multiblock.py  random_block.py  utils.py
src/models/: jepa_module.py
src/models/components/: attentions.py  drop_path.py  mlp.py  positional_embedding.py  vision_transformer.py
src/optimizers/: combined_scheduler.py  cosine_wd.py  warmup_cosine.py
src/utils/: audio_utils.py  tensors.py  visualize.py
