[project]
name = "AudioJEPA"
version = "0.1.0"
description = "Adapting JEPA to generic sounds"
requires-python = "==3.12.9"
readme = "README.md"
dependencies = [
    "autoclip>=0.2.1",
    "av>=14.2.0",
    "flash-attn>=2.7.4.post1",
    "h5py>=3.13.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "ninja>=1.11.1.4",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytorch-optimizer>=3.6.0",
    "rich>=13.9.4",
    "rootutils>=1.0.7",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics>=1.6.1",
    "torchvision>=0.21.0",
    "wandb>=0.19.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv]
# no-cache = true
cache-dir = "./.uv_cache"
